thelounge/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: noprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /irc

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thelounge
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-noprefix@kubernetescrd
spec:
  rules:
  - host: rytis.be
  - http:
      paths:
      - path: /irc
        pathType: Prefix
        backend:
          service:
            name: thelounge
            port:
              number: 9000
